--- a/traingogo1/css/sweetshop1.css
+++ b/traingogo1/css/sweetshop1.css
@@ -58,14 +58,7 @@
 
 .productmap-container>.map {
     width: 33%;
-    /* height: 260px; */
 }
-
-
-/* .map a{
-  height: 100%;
-  width: 100%;
-} */
 
 .map-img1 {
     background: url("https://bit.ly/2R5tqwD") no-repeat;
@@ -115,43 +108,237 @@
 
 .map-img>p:hover {
     background-color: #FFE180;
+    color: #3F5D45;
+}
+
+/* !-----------productmp area-------- */
+
+.shopcontent {
+    width: 100%;
+    margin: 80px 0px;
+}
+
+.shopcontainer {
+    background-color: #EAF0ED;
+    margin-bottom: 100px;
+    width: 100%;
+
+}
+
+.content-img {
+    width: 100%;
+    max-width: 460px;
+    height: 460px;
+    margin: -20px 0px;
+}
+
+.contenttext-img {
+    width: 89px;
+    height: 307px;
+    margin: -20px 0px 0px 0px;
+}
+
+.container2>.content-img {
+    order: 3;
+}
+
+.container2>.contain-text {
+    order: 1;
+}
+
+.container2>.contenttext-img {
+    order: 2;
+}
+
+
+.container3-img {
+    width: 89px;
+    height: 328px;
+}
+
+.contain-text {
+    writing-mode: vertical-rl;
+    line-height: 24px;
+    height: 280px;
+    color: #8DA291;
+    margin: auto 0;
+}
+
+.container3 {
+    width: 100%;
+
+}
+
+/* !------shopcontent-------- */
+
+
+.shopcard {
+    width: 100%;
+
+}
+
+.card-wrap {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.cardimg {
+    width: 100%;
+    height: 315px;
+}
+
+.dayly {
+    color: #EAF0ED;
+    background-color: #3F5D45;
+    writing-mode: vertical-lr;
+    width: 36px;
+    height: 107px;
+    position: absolute;
+    left: 10px;
+
+}
+
+.card-container {
+    width: 30%;
+    position: relative;
+}
+
+.heart {
+    width: 20px;
+    height: 18px;
+    position: absolute;
+    right: 5px;
+    top: 5px;
+}
+
+.cardtext>span {
+    margin: 14px 33px;
+    text-align: center;
+    background-color: azure;
+}
+
+.cardtext span:nth-child(1) {
+    width: 65%;
+    background-color: #FFE180;
+}
+
+.addcart {
+    width: 100%;
+    background-color: #EAF0ED;
+    text-align: center;
+
+}
+
+.addcart>p {
+    padding: 16px 0px;
+
 }
 
 @media(max-width:375px) {
     .header {
         max-width: 100%;
     }
+
     .mlogo-img {
         display: inline-block;
         min-width: 114px;
     }
+
     .header-imgcontainer>.pclogo-img {
         display: none;
     }
+
     .header-navcontainer {
         order: 1;
     }
+
     .header-imgcontainer {
         order: 2;
     }
+
     .header-navcontainer>.h6 {
         display: none;
     }
+
     .header-navcontainer>.nav-dehaze {
         display: inline-block;
         min-width: 18px;
         height: 12pt;
     }
+
     .header-logonavcontainer {
         width: 69%;
     }
+
     .shopcart-img {
         bottom: 0px;
         right: 0px;
     }
+
     /* !-------header area-----------! */
     .banner {
         max-width: 100%;
         margin-top: 33px;
     }
+
+    /* !-------banner area-----------! */
+
+    .productmap {
+        margin: 0px;
+        width: 100%;
+    }
+
+    .productmap-container {
+
+        height: 180px;
+    }
+
+    /* !-------banner area-----------! */
+    .contenttext-img {
+        display: none;
+    }
+
+    .shopcontainer {
+        background-color: white;
+    }
+
+    .content-imgm {
+        display: inline;
+        width: 50%;
+        margin: 0 auto 30px auto;
+
+    }
+
+    .contain-text {
+        background-color: #EAF0ED;
+        width: 100%;
+        writing-mode: horizontal-tb;
+        margin: 0 auto;
+        order: 3;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+
+    }
+
+    .content-img {
+        margin: 0px;
+        order: 2;
+        max-height: 50%;
+        max-width: 100%;
+    }
+
+    .container3-imgm {
+        display: inline;
+        width: 50%;
+        margin: 0 auto;
+    }
+
+    .container3-img {
+        display: none;
+
+    }
+
 }
