--- a/traingogo1/css/sweetshop1.css
+++ b/traingogo1/css/sweetshop1.css
@@ -4,6 +4,10 @@
     position: relative;
 }
 
+.headerbanner-wrap {
+    max-width: 1024px;
+}
+
 .header-logonavcontainer {
     width: 95%;
 }
@@ -47,12 +51,13 @@
 /* !-------banner area----------- ! */
 
 .productmap {
-    width: 85%;
+    width: 70%;
     margin: -50px auto 80px auto;
 }
 
 .productmap-container {
-    width: 100%;
+    margin: 0 auto;
+    width: 80%;
     height: 260px;
 }
 
@@ -123,6 +128,12 @@
     margin-bottom: 100px;
     width: 100%;
 
+
+}
+
+.shopcontent-wrap {
+    max-width: 1024px;
+    margin: 0 auto;
 }
 
 .content-img {
@@ -138,15 +149,15 @@
     margin: -20px 0px 0px 0px;
 }
 
-.container2>.content-img {
+.container2 .shopcontent-wrap>.content-img {
     order: 3;
 }
 
-.container2>.contain-text {
+.container2 .shopcontent-wrap>.contain-text {
     order: 1;
 }
 
-.container2>.contenttext-img {
+.container2 .shopcontent-wrap>.contenttext-img {
     order: 2;
 }
 
@@ -174,12 +185,18 @@
 
 .shopcard {
     width: 100%;
+    margin-bottom: 80px;
+    max-height: 100%;
+
 
 }
 
 .card-wrap {
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
+    height: 100%;
+    max-width: 1024px;
+
 }
 
 .cardimg {
@@ -195,12 +212,14 @@
     height: 107px;
     position: absolute;
     left: 10px;
-
 }
 
 .card-container {
-    width: 30%;
+    width: 300px;
+    max-height: 100%;
     position: relative;
+    border: 1px solid #EAF0ED;
+    box-sizing: border-box;
 }
 
 .heart {
@@ -211,28 +230,156 @@
     top: 5px;
 }
 
-.cardtext>span {
-    margin: 14px 33px;
-    text-align: center;
-    background-color: azure;
+.cardtext {
+    color: #3F5D45;
+    font-weight: bold;
 }
 
-.cardtext span:nth-child(1) {
-    width: 65%;
-    background-color: #FFE180;
+.cardtext div:first-child {
+    font-size: 20px;
+    width: 57%;
+    text-align: center;
+    padding: 14px 0 14px 0;
+}
+
+.cardtext div:last-child {
+    font-size: 20px;
+    width: 43%;
+    border-left: 1px solid #EAF0ED;
+    text-align: center;
+    padding: 14px 0 14px 0;
+    font-weight: bold;
 }
 
 .addcart {
     width: 100%;
     background-color: #EAF0ED;
     text-align: center;
+    font-weight: bold;
 
 }
 
 .addcart>p {
     padding: 16px 0px;
+    color: #3F5D45;
 
 }
+
+/* !-------shopcard----------- */
+
+
+.footer {
+    width: 100%;
+}
+
+.subcontainer {
+    width: 100%;
+    background-color: #3F5D45;
+}
+
+.subontainerwarp {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.subtext {
+    width: 50%;
+    margin: 41px 0px;
+}
+
+.subtext>.h3 {
+    margin-left: 20px;
+}
+
+.emailtext {
+    width: 50%;
+    position: relative;
+
+}
+
+.mail-img {
+    background: url("https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/mail-24px.png")no-repeat;
+    background-position: center left;
+    background-size: 25px 25px;
+    height: 56px;
+    width: 100%;
+    background-color: #EAF0ED;
+    display: block;
+    box-sizing: border-box;
+    border: 0px;
+    text-indent: 10%;
+    outline: 0;
+
+}
+
+.emailcontainer {
+    width: 100%;
+    height: 56px;
+    margin-right: 10px;
+
+
+}
+
+.arrow {
+    box-sizing: border-box;
+    background-color: #FFE180;
+    width: 64px;
+    height: 56px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+}
+
+.subtext>span {
+    color: #EAF0ED;
+}
+
+.logoimg {
+    width: 40px;
+    height: 40px;
+}
+
+.infologo-img {
+    width: 171px;
+    height: 27px;
+}
+
+.icon-img {
+    width: 32px;
+    height: 32px;
+}
+
+.text-area {
+    margin: 101px 0 30px 0;
+}
+
+.infocontainer {
+    background-color: #EAF0ED;
+    width: 100%;
+    padding: 40px 0px 30px 0px;
+}
+
+.info-text {
+    width: 30%;
+}
+
+.info-vertical {
+
+    width: 70%;
+}
+
+.infowrap {
+    width: 80%;
+
+}
+
+.infovertical-img {
+    width: 59px;
+    height: 219px;
+    margin-top: -20px;
+}
+
+
 
 @media(max-width:375px) {
     .header {
@@ -289,8 +436,8 @@
     }
 
     .productmap-container {
-
         height: 180px;
+        width: 100%;
     }
 
     /* !-------banner area-----------! */
@@ -306,7 +453,6 @@
         display: inline;
         width: 50%;
         margin: 0 auto 30px auto;
-
     }
 
     .contain-text {
@@ -319,8 +465,10 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+    }
 
-
+    .container2>.contain-text {
+        order: 3;
     }
 
     .content-img {
@@ -340,5 +488,45 @@
         display: none;
 
     }
+
+    .card-container:nth-child(n+2) {
+        display: none;
+        width: 100%;
+    }
+
+    .card-container:first-child {
+        width: 80%;
+    }
+
+    /* footer */
+
+    .subontainerwarp {
+        flex-direction: column;
+
+    }
+
+    .subtext {
+        width: 100%;
+
+    }
+
+    .emailtext {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .infovertical-img {
+        display: none;
+    }
+
+    .info-vertical {}
+
+    .info-text {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+
+    /* footer */
 
 }
