--- a/traingogo1/css/sweetshop1.css
+++ b/traingogo1/css/sweetshop1.css
@@ -440,7 +440,7 @@
         width: 100%;
     }
 
-    /* !-------banner area-----------! */
+    /* !-------productmap area-----------! */
     .contenttext-img {
         display: none;
     }
