20220614 finish sweetshop2-re

--- a/traingogo1/css/sweetshop2.css
+++ b/traingogo1/css/sweetshop2.css
@@ -41,7 +41,7 @@
   max-width: 94%;
   margin-top: 33px;
   padding-top: 50%;
-  background: url('https://bit.ly/2Qodh3Z')no-repeat;
+  background: url('https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/banner.png')no-repeat;
   background-size: cover;
   background-position: center;
 }
