--- a/traingogo1/css/sweetshopcheckout3-1.css
+++ b/traingogo1/css/sweetshopcheckout3-1.css
@@ -35,6 +35,15 @@
   height: 24px;
 }
 
+.header-navcontainer a {
+  text-decoration: none;
+}
+
+.header-navcontainer {
+  padding-bottom: 0px;
+  align-items: center;
+  width: 30%;
+}
 
 /* !-------header area-----------! */
 
@@ -214,6 +223,10 @@
   border: none;
 }
 
+.diliver-circle li:nth-child(2) {
+  border: none;
+}
+
 .diliver-circle li:nth-child(1) i {
   font-size: 25px;
   color: #EAF0ED;
@@ -222,7 +235,15 @@
   left: -1px;
 }
 
-.diliver-circle li:nth-child(2)::before {
+.diliver-circle li:nth-child(2) i {
+  font-size: 25px;
+  color: #EAF0ED;
+  position: relative;
+  top: -4px;
+  left: -1px;
+}
+
+.diliver-circle li:nth-child(3)::before {
   content: "";
   border: 1px solid #EAF0ED;
   border-radius: 50%;
@@ -232,7 +253,7 @@
   z-index: 3;
   position: absolute;
   top: 47%;
-  left: 44.3%;
+  left: 88.2%;
 }
 
 .diliver-form {
@@ -378,7 +399,7 @@
   box-sizing: border-box;
 }
 
-.d-tel {
+.d-mail {
   width: 100%;
   height: 56px;
   background-color: #EAF0ED;
@@ -447,12 +468,27 @@
 
 }
 
-.bx-credit-card {
-  color: black;
+.diliver-bill {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.diliver-bill a {
+  text-decoration: none;
+  text-align: center;
   font-size: 20px;
-  position: absolute;
-  top: 50px;
-  right: 10px;
+  box-sizing: border-box;
+  display: inline-block;
+  width: 49%;
+  background: #EAF0ED 0% 0% no-repeat padding-box;
+  border: 1px solid #EAF0ED;
+  padding: 14px 0px;
+  color: #3F5D45;
+}
+
+.diliver-bill a:nth-child(2) {
+  color: #EAF0ED;
+  background-color: #3F5D45;
 }
 
 @media (max-width:375px) {
@@ -494,6 +530,22 @@
   .shopcart-img {
     bottom: 0px;
     right: 0px;
+  }
+
+  .header-navcontainer a {
+    display: none;
+  }
+
+  .header-navcontainer a:last-child {
+    display: inline-block;
+    min-width: 18px;
+    height: 12pt;
+  }
+
+  .header-navcontainer a:last-child img {
+    display: inline-block;
+    min-width: 18px;
+    height: 12pt;
   }
 
   /* !-------header area-----------! */
