--- a/traingogo1/css/sweetshop3.css
+++ b/traingogo1/css/sweetshop3.css
@@ -94,7 +94,7 @@
 
 .mail-img {
   background: url("https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/mail-24px.png")no-repeat;
-  background-position: center left;
+  background-position: center left 20px;
   background-size: 25px 25px;
   height: 56px;
   width: 100%;
@@ -263,7 +263,7 @@
 }
 
 .account-container {
-  width: 80%;
+  width: 90%;
   margin: 40px auto;
 }
 
@@ -284,7 +284,6 @@
 
 .accountlist ul li a {
   display: block;
-  /* padding: 17px 100px; */
   width: 100%;
   height: 56px;
   box-sizing: border-box;
@@ -299,6 +298,7 @@
   display: block;
   max-width: 110px;
   margin: 0px auto;
+  object-fit: contain;
 
   /* margin: auto auto; */
 }
@@ -439,7 +439,7 @@
   }
 
   .accountlist ul li a {
-    padding: 10px 16px;
+
     width: 100%;
 
 
@@ -451,7 +451,11 @@
     margin: 30px 0 0 0;
   }
 
-
+  .accountlist ul li a img {
+    height: 100%;
+    display: block;
+    max-width: 100%;
+  }
 
 
 
