--- a/traingogo1/css/sweetshop4.css
+++ b/traingogo1/css/sweetshop4.css
@@ -84,7 +84,7 @@
 
 .mail-img {
   background: url("https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/mail-24px.png")no-repeat;
-  background-position: center left;
+  background-position: center left 20px;
   background-size: 25px 25px;
   height: 56px;
   width: 100%;
@@ -427,7 +427,7 @@
     width: 80%;
     margin: 0 auto 10px;
     padding: 0;
-    /* justify-content: flex-end; */
+    /* justify-content: center; */
   }
 
   .cart-contnet:nth-last-child(1) {
