--- a/traingogo1/css/sweetshopcheckout2.css
+++ b/traingogo1/css/sweetshopcheckout2.css
@@ -35,6 +35,15 @@
   height: 24px;
 }
 
+.header-navcontainer a {
+  text-decoration: none;
+}
+
+.header-navcontainer {
+  padding-bottom: 0px;
+  align-items: center;
+  width: 30%;
+}
 
 /* !-------header area-----------! */
 
@@ -69,7 +78,7 @@
 
 .mail-img {
   background: url("https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/mail-24px.png")no-repeat;
-  background-position: center left;
+  background-position: center left 20px;
   background-size: 25px 25px;
   height: 56px;
   width: 100%;
@@ -494,6 +503,22 @@
   .shopcart-img {
     bottom: 0px;
     right: 0px;
+  }
+
+  .header-navcontainer a {
+    display: none;
+  }
+
+  .header-navcontainer a:last-child {
+    display: inline-block;
+    min-width: 18px;
+    height: 12pt;
+  }
+
+  .header-navcontainer a:last-child img {
+    display: inline-block;
+    min-width: 18px;
+    height: 12pt;
   }
 
   /* !-------header area-----------! */
